# pb-mailer-service

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  test.py
.github/workflows/: publish-on-relaese.yml
pb_mailer_service/: __init__.py  avro.py  buisness.py  config.py  mail.py  main.py  setup.py
pb_mailer_service/schemas/: __init__.py  billing.py  general.py  revshare.py
pb_mailer_service/templates/: base.html
pb_mailer_service/templates/billing/: order_update_sub_with_coupon.html  order_update_sub_without_coupon.html  purchase_lifetime_success.html  purchase_lifetime_upgrade.html  subscription_cancelled.html  subscription_ended.html  subscription_failure.html  subscription_reminder.html  subscription_renew.html  subscription_success.html  subscription_upgrade.html
pb_mailer_service/templates/revshare/: product_approved.html  product_need_work.html  product_rejected.html
